# megai_man

./: .gitignore  README.md  collision_mapper.py  main.py  minimap.lua  pyproject.toml  requirements.txt  reward.py  test.py  train.py
custom_integrations/MegaMan-v2-Nes/: cutman.npy  metadata.json  scenario.json
custom_integrations/MegaManv2-Nes/: data.json  scenario.json  script.lua
megai_man/: brute.py  callbacks.py  collision_mapper.py  debug.py  debug_ram.py  env.py  go_explore.py  hit_visibility_frames.yaml  hit_visibility_frames_old.yaml  hyperparam_optimization.py  movies_padding.py  nn_visualizer.py  play.py  playback_movie.py  policy.py  reward.py  test.py  test_boss.py  test_dqn.py  test_ram.py  tile_extractor.py  train.py  train_boss.py  train_dqn.py  train_pretrained.py  train_ram.py  train_trpo.py  utils.py  wrappers.py
megai_man/custom_integrations/: gutsman.npy
megai_man/custom_integrations/MegaMan-v1-Nes/: CutMan-boss.state  cutman.npy
megai_man/custom_integrations/MegaMan-v2-Nes/: CutMan.state  CutMan_edit.state  CutMan_edit_old.state  NightmarePit.state  cutman.npy  data.json  rom.sha  rom_edit.sha  scenario.json  scenario_disc.json  scenario_invincible.json
megai_man/goexplore/: __init__.py  algorithm.py  archive.py  cell.py  exceptions.py  renderer.py  termination.py  tree.py  utils.py  wrappers.py
megai_man/stages_meta/: cut.yaml  guts.yaml
notebooks/: distance_map.ipynb  dqn_distributions.ipynb  hyperparam_search.ipynb  nn_arch.ipynb  optimization.ipynb  palettes.ipynb
