[tool.poetry]
name = "megai-man"
version = "0.1.0"
description = ""
authors = ["Victor Severo <victor.severo.miranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
stable-baselines3 = { extras = ["extra"], version = "^2.2.1" }

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
seaborn = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
